--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,13 @@ html,body{
     font-family: 'Roboto Condensed', sans-serif;
 }
 /* HEADER */
+header{
+    position: absolute;
+    top: 20px;
+    z-index: 99;
+    left: 50%;
+    transform: translateX(-50%);
+}
 #movieNavbar .navbar-nav {
     border-bottom: 1px solid rgba(255,255,255,0.2);
 }
@@ -20,7 +27,7 @@ html,body{
     width: 100%;
     height: 3px;
     display: block;
-    background: linear-gradient(to right,#fbbd61,#ec7532);
+    background:linear-gradient(to right,#fbbd61,#ec7532);
     /* #fbbd61,#ec7532 */
 }
 #movieNavbar .navbar-nav .active::after{
@@ -54,3 +61,66 @@ html,body{
     padding-right: 15px;
     padding-left: 15px;
 }
+.carousel__trailer span{
+    display: inline-block;
+    width: 45px;
+    height: 45px;
+    margin-right: 5px;
+
+    border: 2px solid white;
+    border-radius: 50%;
+
+    text-align: center;
+    line-height: 45px;
+    font-size: 13px;
+}
+#movie-carousel .carousel__trailer button{
+    padding: 0.5em 1.5em;
+    border-radius: 2em;
+    background: linear-gradient(to right,#fbbd61,#ec7532);
+    color: white;
+    letter-spacing: 4px;
+    text-transform: uppercase;
+}
+/* NEW IN */
+.newIn__img{
+    position: relative;
+    overflow: hidden;
+}
+.newIn__overlay{
+    width: 200%;
+    height: 100%;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    background: linear-gradient(to bottom,#fbbd61,#ec7532);
+    opacity: 0.8;
+
+    transform: skewX(30deg) translateX(-120%);
+    transition: all 0.7s;
+}
+.newIn__img:hover .newIn__overlay{
+    transform: skewX(30deg) translateX(-20%);
+}
+    /* coming soon */
+   .comingSoon{
+       background-color: black;
+       position: relative;
+   }
+   .comingSoon__bg{
+       background-image: url(../img/slide-3.png);
+       background-size: cover;
+
+       position: absolute;
+       top: 0;
+       left: 0;
+       
+       width: 100%;
+       height: 100%;
+      
+   }
+   .comingSoon__content{
+       color: white;
+   }
