--- a/css/style.css
+++ b/css/style.css
@@ -116,7 +116,7 @@ header{
        position: absolute;
        top: 0;
        left: 0;
-       
+
        width: 100%;
        height: 100%;
       
@@ -124,3 +124,10 @@ header{
    .comingSoon__content{
        color: white;
    }
+/* REPOSIVE */
+/* kich thuoc 0-576px */
+@media screen and (max-width:576px){
+    #myTabContent img{
+        width: 100%;
+    }
+}
