--- a/css/main.css
+++ b/css/main.css
@@ -80,4 +80,47 @@
   opacity: .75;
   color: #fff;
 }
+
+.comingSoon__content .comingSoon__slide .comingSoon__video {
+  position: relative;
+}
+
+.comingSoon__content .comingSoon__slide .comingSoon__video img {
+  width: 100%;
+  display: block;
+}
+
+.comingSoon__content .comingSoon__slide .comingSoon__video .playIcon {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.comingSoon__content .comingSoon__slide .comingSoon__video .playIcon i {
+  width: 80px;
+  height: 80px;
+  text-align: center;
+  line-height: 80px;
+  border: 2px solid #ec7532;
+  border-radius: 50%;
+  font-size: 25px;
+  -webkit-transition: all 0.7s;
+  transition: all 0.7s;
+}
+
+.comingSoon__content .comingSoon__slide .comingSoon__video .playIcon i:hover {
+  -webkit-transform: scale(0.8);
+          transform: scale(0.8);
+}
 /*# sourceMappingURL=main.css.map */
