--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 /* GLOBAL */
 html,body{
     font-family: 'Roboto Condensed', sans-serif;
@@ -141,6 +146,7 @@ header{
     position: relative;
     overflow: hidden;
     margin-bottom: 20px;
+    border-radius: 10px;
 }
 .newIn__overlay{
     width: 200%;
@@ -224,9 +230,12 @@ header{
 }
 #showTime .nav-tabs .nav-link{
     border: none;
-    padding: 15px 30px;
-    font-size: 18px;
     color: #4a4a4a;
+    font-size: 16px;
+    display: block;
+    padding: 10px 30px 15px 30px;
+    letter-spacing: 1px;
+    
 }
 #showTime .nav-tabs .nav-link::after{
     content: "";
@@ -349,6 +358,22 @@ header{
 }
 .movieList__item{
     text-align: center;
+    position: relative;
+}
+.movieList__layout{
+    width: 100%;
+    height: 100%;
+    background-color: black;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    opacity: 0.6;
+    transition: all 0.7s;
+}
+.movieList__item:hover .movieList__layout{
+    opacity: 0;
 }
 .movieList__item img{
     width: 100%;
@@ -371,11 +396,94 @@ header{
     opacity: .5;
     color: #fff;
 }
-
+/* CONTACT */
+.contact{
+    text-align: center;
+    padding: 50px 0;
+}
+.contact h2{
+    font-size: 23px;
+    margin-bottom: 10px;
+    letter-spacing: 1px;
+    color: #4a4a4a;
+}
+.contact p{
+    font-size: 46px;
+    font-weight: 400;
+    background: linear-gradient(330deg,#fbbd61 0%,#ec7532 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+/* FOOTER */
+footer{
+    padding: 75px 15px 0;
+    color: #fff;
+    background: #101010
+}
+.footer__item{
+    padding: 0;
+}
+footer h3{
+    font-size: 16px;
+    letter-spacing: 2px;
+    color: #ec7532;
+}
+footer ul{
+    list-style: none;
+}
+footer li a{
+    font-size: 13px;
+    display: inline-block;
+    padding: 3px 0;
+    letter-spacing: 1.5px;
+    color: #fff;
+    transition: all 0.5s;
+}
+footer li a:hover{
+    text-decoration: none;
+    color: #fbbd61;
+}
+footer li a i{
+    margin-right: 10px;
+    color: #4a4a4a;
+}
+footer li a i:hover{
+    color: #fbbd61;
+}
+.footer__copy{
+    width: 100%;
+    padding: 20px 0;
+    border-top: 1px solid #4a4a4a;
+}
+.footer__copy a{
+    color: #fff;
+    transition: all 0.5s;
+}
+.footer__copy a:hover{
+    color: #ec7532;
+    text-decoration: none;
+}
 
 
 /* REPOSIVE */
-
+/* kich thuoc < 992px */
+@media screen and (max-width:992px){
+    .container{
+        max-width: 970px;
+    } 
+}
+/* kich thuoc < 768px */
+@media screen and (max-width:767px){
+    .newIn__img{
+        max-width: 263px;
+        border-radius: 0px;
+        border-top-left-radius:10px;
+        border-bottom-left-radius:10px;
+    }
+    .footer__item{
+        margin-bottom: 30px;
+    } 
+}
 /* kich thuoc 0-576px */
 @media screen and (max-width:600px){
     /* RESPONSIVE NEW IN */
@@ -414,8 +522,4 @@ header{
         flex:100%;
     }
 }
-@media screen and (max-width:992px){
-    .container{
-        max-width: 970px;
-    } 
-}
+
