--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,7 @@ header{
 #movieNavbar .navbar-nav .active::after{
     width: 100%;
 }
+/* MOVIE CAROUSEL */
 #movie-carousel .carousel-caption{
     text-align: left;
     top: 50%;
@@ -76,6 +77,26 @@ header{
     margin: 0;
     padding-right: 15px;
     padding-left: 15px;
+}
+#movie-carousel .carousel-inner .carousel_arrow{
+    width: 90px;
+
+    position: absolute;
+    left: 50%;
+    bottom: 0;
+
+    animation: move-arrow 1.5s linear  infinite;
+}
+@keyframes move-arrow {
+    0% {
+        transform: translateX(0);
+    }
+    50% {
+        transform: translateX(3px);
+    }
+    100% {
+        transform: translateX(0);
+    }
 }
 .carousel__trailer span{
     display: inline-block;
@@ -113,8 +134,7 @@ header{
     letter-spacing: 3px;
 }
 #movie-carousel .carousel-caption p{
-    font-size: 18px;
-    
+    font-size: 18px;   
 }
 /* NEW IN */
 .newIn{
@@ -307,36 +327,37 @@ header{
     background: #4a4a4a;
 }
 
-
-/* coming soon */
-/* .comingSoon{
+/* COMING SOON */
+.comingSoon {
     background-color: black;
     position: relative;
-}
-.comingSoon__bg{
+    padding-top: 75px;
+  }
+  
+  .comingSoon__bg {
     background-image: url(../img/slide-3.png);
     background-size: cover;
-
     position: absolute;
     top: 0;
     left: 0;
-
     width: 100%;
     height: 100%;
-    
-}
-.comingSoon__content{
+  }
+  
+  .comingSoon__content {
     color: white;
-}
-.comingSoon__content h2{
+  }
+  
+  .comingSoon__content h2 {
     font-size: 18px;
     margin-bottom: 40px;
     padding-bottom: 20px;
     letter-spacing: 1.7px;
     position: relative;
     border-bottom: 1px solid #d8d8d8;
-}
-.comingSoon__content h2::after{
+  }
+  
+  .comingSoon__content h2::after {
     position: absolute;
     right: auto;
     bottom: -1px;
@@ -344,13 +365,95 @@ header{
     width: 125px;
     height: 4px;
     content: '';
-    background-image: linear-gradient(to right,#fbbd61,#ec7532);
-}
-.comingSoon__content .col-6>span{
+    background-image: -webkit-gradient(linear, left top, right top, from(#fbbd61), to(#ec7532));
+    background-image: linear-gradient(to right, #fbbd61, #ec7532);
+  }
+  
+  .comingSoon__content .comingSoon__slide {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  
+  .comingSoon__content .comingSoon__slide span.title {
     font-size: 14px;
     letter-spacing: 2px;
     color: #ec7532;
-} */
+  }
+  
+  .comingSoon__content .comingSoon__slide span.moreInfo {
+    font-size: 14px;
+    letter-spacing: 3px;
+    color: #ec7532;
+    text-transform: uppercase;
+  }
+  
+  .comingSoon__content .comingSoon__slide h3.name-movie {
+    font-size: 34px;
+    font-weight: 300;
+    letter-spacing: 1px;
+  }
+  
+  .comingSoon__content .comingSoon__slide div.star {
+    color: #fbbd61;
+  }
+  
+  .comingSoon__content .comingSoon__slide div.star div.date {
+    font-size: 14px;
+    display: inline-block;
+    opacity: .75;
+    color: #fff;
+  }
+  
+  .comingSoon__content .comingSoon__slide .comingSoon__video {
+    position: relative;
+  }
+  
+  .comingSoon__content .comingSoon__slide .comingSoon__video img {
+    width: 100%;
+    display: block;
+  }
+  
+  .comingSoon__content .comingSoon__slide .comingSoon__video .playIcon {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  
+  .comingSoon__content .comingSoon__slide .comingSoon__video .playIcon i {
+    width: 80px;
+    height: 80px;
+    text-align: center;
+    line-height: 80px;
+    border: 2px solid #ec7532;
+    border-radius: 50%;
+    font-size: 25px;
+    -webkit-transition: all 0.7s;
+    transition: all 0.7s;
+  }
+  
+  .comingSoon__content .comingSoon__slide .comingSoon__video .playIcon i:hover {
+    -webkit-transform: scale(0.8);
+            transform: scale(0.8);
+  }
+  /*# sourceMappingURL=main.css.map */
 /* MOVIELIST */
 .movieList{
     padding: 50px 0;
